<resources>
    <string name="app_name">finance-management-android</string>
<<<<<<< Updated upstream
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
=======
    
    <!-- Category Strings -->
    <string name="categories">Categories</string>
    <string name="add_category">Add Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="delete_category">Delete Category</string>
    <string name="delete_category_confirmation">Are you sure you want to delete "%1$s"?</string>
    <string name="category_name">Category Name</string>
    <string name="category_type">Category Type</string>
    <string name="no_categories">No categories yet</string>
    
    <!-- Filter Options -->
    <string name="filter_all">All</string>
    <string name="filter_income">Income</string>
    <string name="filter_expense">Expense</string>
    
    <!-- Category Types -->
    <string name="type_income">Income</string>
    <string name="type_expense">Expense</string>
    
    <!-- Common Actions -->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="operation_success">Success</string>
    
    <!-- Errors -->
    <string name="error_name_required">Category name is required</string>
>>>>>>> Stashed changes
</resources>